# perceptron

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  main.py  pyproject.toml
.github/workflows/: ci.yml
.kiro/steering/: product.md  structure.md  tech.md  workflow.md
.openhands/microagents/: repo.md
example/: demo.py
tests/: __init__.py  test_main.py
